--- a/index.css
+++ b/index.css
@@ -39,6 +39,11 @@ ul {
     left: 0;
 }
  h1 {
-    font-size:1000px;
+    font-size: 100%;
     font-family: sans-serif;
+    margin-top:50%;
+    -webkit-transition-duration: 2s;
+    transition-duration:2s;
+    
+   
 }
