--- a/index.css
+++ b/index.css
@@ -39,11 +39,11 @@ ul {
     left: 0;
 }
  h1 {
-    font-size: 100%;
+    font-size: 500%;
     font-family: sans-serif;
-    margin-top:50%;
+    margin-top:10%;
     -webkit-transition-duration: 2s;
     transition-duration:2s;
-    
+    text-align:center;
    
 }
