--- a/index.css
+++ b/index.css
@@ -45,5 +45,14 @@ ul {
     -webkit-transition-duration: 2s;
     transition-duration:2s;
     text-align:center;
-   
+    color: #0E174C;
 }
+p {
+font-family: sans-serif;
+}
+
+
+
+
+
+
