--- a/index.css
+++ b/index.css
@@ -55,9 +55,9 @@ font-family: sans-serif;
 #social {
 	ul {
     list-style-type: none;
-    margin: 0;
+    margin-top: 40px;
     padding: 0;
-    width: 200px;
+    width: 10%;
     background-color: red;
 }
 
