--- a/index.css
+++ b/index.css
@@ -1,26 +1,21 @@
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-
+}
 
 li {
     float: left;
 }
 
-li a{
+li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: monospace;
-    font-size:40px;
-    border-bottom: 5px;
-    border-bottom-color:#0E174C;
 }
 
 /* Change the link color to #111 (black) on hover */
@@ -28,18 +23,8 @@ li a:hover {
     background-color: #111;
 }
 #videos {
-	font-family: monospace;
-	font-size:60px;
-	float:right;
-	background-color: #0E174C;
+	background-color:darkblue;
 }
-ul {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    left: 0;
-}
-
  h1 {
     font-size: 500%;
     font-family: sans-serif;
