--- a/index.css
+++ b/index.css
@@ -16,6 +16,8 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family:monospace;
+    font-size: 100%;
 }
 
 /* Change the link color to #111 (black) on hover */
@@ -23,19 +25,26 @@ li a:hover {
     background-color: #111;
 }
 #videos {
-	background-color:darkblue;
+	background-color: #0a00c9;
+}ul {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left:0;
+    right:0;
 }
  h1 {
     font-size: 500%;
     font-family: sans-serif;
-    margin-top:10%;
+    margin-top:5%;
     -webkit-transition-duration: 2s;
     transition-duration:2s;
-    text-align:center;
+    text-align: center;
     color: #0E174C;
 }
 p {
-font-family: sans-serif;
+    font-family: sans-serif;
+    text-align:center;
 }
 
 
