--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ li a:hover {
     background-color: #111;
 }
 #videos {
-	background-color: #0a00c9;
+	background-color: #0E174C;
 	float: right;
 }
 ul {
@@ -33,7 +33,7 @@ ul {
     top: 0;
     width: 100%;
     left:0;
-    right:0;
+  
 }
  h1 {
     font-size: 500%;
