--- a/index.css
+++ b/index.css
@@ -10,14 +10,16 @@ li {
     float: left;
 }
 
-li a {
+li a{
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-family: monospace;
-    font-size: 200%;
+    font-size:40px;
+    border-bottom: 5px;
+    border-bottom-color:#0E174C;
 }
 
 /* Change the link color to #111 (black) on hover */
@@ -25,33 +27,18 @@ li a:hover {
     background-color: #111;
 }
 #videos {
+	font-family: monospace;
+	font-size:60px;
+	float:right;
 	background-color: #0E174C;
-	float: right;
 }
 ul {
     position: fixed;
     top: 0;
     width: 100%;
-    left:0;
-  
+    left: 0;
 }
  h1 {
-    font-size: 500%;
+    font-size:1000px;
     font-family: sans-serif;
-    margin-top:5%;
-    -webkit-transition-duration: 2s;
-    transition-duration:2s;
-    text-align: center;
-    color: #0E174C;
 }
-p {
-    font-family: sans-serif;
-    text-align:center;
-    margin-top:1px;
-}
-
-
-
-
-
-
