--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ ul {
     font-size:200%;
     font-family: sans-serif;
     margin-bottom: 1px;
+    margin-top: 50%;
 }
 p { 
    font-family: sans-serif;
