--- a/index.css
+++ b/index.css
@@ -39,14 +39,16 @@ ul {
     left: 0;
 }
  h1 {
-    font-size:200%;
+    font-size:500%;
     font-family: sans-serif;
     margin-bottom: 1px;
-    margin-top: 50%;
+    margin-top: 10%;
+    text-align: center;
 }
 p { 
    font-family: sans-serif;
-   font-size: 50%;
+   font-size: 150%;
+   text-align: center;
 }
 	
 	
