--- a/index.css
+++ b/index.css
@@ -53,9 +53,15 @@ p {
 button{
 	background-color: #0E174C;
 	font-family: monospace;
-	font-size: 150%;
+	font-size: 50px
 	border: none;
-	text-align:center;
+	border-radius: 12px;
+	color:white;
+}
+button :hover {
+	background-color: white
+	color:#0E174C;;
+	transition-duration:1s;
 }
 	
 	
