--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ p {
    font-size: 150%;
    text-align: center;
 }
-button{
+.button{
 	background-color: #0E174C;
 	font-family: monospace;
 	font-size: 50px
@@ -58,7 +58,7 @@ button{
 	border-radius: 12px;
 	color:white;
 }
-button :hover {
+.button :hover {
 	background-color: white
 	color:#0E174C;;
 	transition-duration:1s;
