--- a/index.css
+++ b/index.css
@@ -50,19 +50,22 @@ p {
    font-size: 150%;
    text-align: center;
 }
-button{
-	background-color: #0E174C;
-	font-family: monospace;
-	font-size: 100px
-	border: none;
-	border-radius: 12px;
-	color:white;
-	transition-duration:1s;
-}
-button :hover {
-	background-color: white
-	color:#0E174C;;
-	
+#look {
+	    text-align: center;
+    text-transform: uppercase;
+    padding: 13px 35px 13px 35px;
+    border-radius: 4px;
+    margin: 10px;
+    border: none;
+    background-color: #e96656;
+    box-shadow: none;
+    text-shadow: none;
+    font-weight: 400;
+    vertical-align: middle;
+    cursor: pointer;
+    white-space: nowrap;
+    font-size: 14px;
+    color: #FFF;
 }
 	
 	
