--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ p {
     white-space: nowrap;
     font-size: 14px;
     color: #FFF;
-    margin-left:50%;
+    margin-left:40%;
 }
 #button {
 	background-color: gray;
@@ -74,6 +74,12 @@ p {
     padding-bottom: 60px;
     left:0;
     right:0;
-    color:white;}
+    margin-left:0;
+    margin-right:0;
+    color:white;
+    margin-top:10%;
+    
+    
+}
 	
 	
