--- a/index.css
+++ b/index.css
@@ -67,10 +67,10 @@ p {
     font-size: 14px;
     color: #FFF;
     margin-left:40%;
-    transition-duration:1s;
-    -webkit-transition-duration:1s
+    transition-duration:.4s;
+  
 }
-#look :hover {
+#look:hover {
 	background-color: white;
 	color:#0E174C;
 }
