--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ ul {
     margin-bottom: 1px;
     margin-top: 10%;
     text-align: center;
+    vertical-align: middle;
 }
 p { 
    font-family: sans-serif;
@@ -67,7 +68,7 @@ p {
     font-size: 14px;
     color: #FFF;
     margin-left:40%;
-    transition-duration:.4s;
+    transition-duration:1s;
   
 }
 #look:hover {
