--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ ul {
     margin-top: 10%;
     text-align: center;
     vertical-align: middle;
+    white-space: nowrap;
 }
 p { 
    font-family: sans-serif;
