--- a/index.css
+++ b/index.css
@@ -94,11 +94,10 @@ h2 {
 	color: #0E174C;
 	text-align:center;
 }
-#title {
+#image {
 	background-image:url("PC.png");
 	padding-top:30%;
 	padding-bottom:30%;
-	background-color:red;
 }
 
 	
