--- a/index.css
+++ b/index.css
@@ -96,14 +96,27 @@ h2 {
 	text-align:center;
 }
 #image {
-	background-image:url("PC.png");
-	padding-top:30%;
-	padding-bottom:30%;
+	background-image: url("PC.png");
+	background-repeat: no-repeat;
+	padding-top: 30%;
+	padding-bottom: 30%;
 	color: white;
 }
-#image p { 
-	margin-bottom: 2px;
+@media only screen and (max-width: 500px) {
+	#image p {
+		margin-bottom: 600px;
+	}
 }
-
+@media only screen and (max-width: 250px) {
+	#image p {
+		margin-bottom: 300px;
+	}
+}
+@media only screen and (min-width: 500px) {
+	#image p{
+		margin-bottom: 900px;
+	}
+}
+	}
 	
 	
