--- a/index.css
+++ b/index.css
@@ -102,21 +102,24 @@ h2 {
 	padding-bottom: 30%;
 	color: white;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px, min-width:0px) {
 	#image p {
 		margin-bottom: 600px;
 	}
 }
-@media only screen and (max-width: 250px) {
+@media only screen and (max-width: 250px,min-width:0px) {
 	#image p {
 		margin-bottom: 300px;
 	}
 }
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 500px, max-width:750 px) {
 	#image p{
 		margin-bottom: 900px;
 	}
 }
+@media only screen and (max-width: 1000px, min-width: 750px) {
+	#image p {
+		margin-bottom: 1200px;
 	}
-	
+}
 	
