--- a/index.css
+++ b/index.css
@@ -103,5 +103,10 @@ h2 {
 	color: white;
 	
 }
-
+#HTML {
+	font-family: sans-serif;
+	font-size: 2em;
+	text-align: right;
+	margin-right: 30%;
+}
 	
