--- a/index.css
+++ b/index.css
@@ -106,7 +106,16 @@ h2 {
 #HTML {
 	font-family: sans-serif;
 	font-size: 2em;
-	text-align: right;
-	margin-right: 30%;
+	text-align: left;
+	margin-left: 40%;
+	background-color: gray;
+	border-color: #0E174C;
+	border-radius: 12px;
+	padding-top: 10%;
+	padding-bottom: 10%;
+}
+#box {
+	background-color: light-gray;
+}
 }
 	
